hphp/test/slow/reified_generics/reified-param-primitive-2b.php.expectf

Warning: Argument 1 passed to f() must be an instance of (C<int>, string), array given in %s on line 5

Catchable fatal error: Argument 1 passed to f() must be an instance of (C<int>, int), array given in %s on line 10
